apps/kubernetes/k3s/apps/mealie/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: mealie
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mealie.hughboi.cc`)
      kind: Rule
      services:
        - name: mealie
          port: 9000
  tls:
    secretName: hughboi-tls
